--- a/templates/nutrition/category_form.html
+++ b/templates/nutrition/category_form.html
@@ -2,7 +2,15 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>{{ object|yesno:"Update,Create" }} category</h1>
+  {% block content %}
+  <h1>
+    {% if object %}
+      Update category
+    {% else %}
+      Create category
+    {% endif %}
+  </h1>
+
   <form action="" method="post" novalidate>
     {% csrf_token %}
     {{ form|crispy }}
