updated customer_detail.html, customer_confirm_delete.html, CustomerUpdateForm, CustomerCreateForm

--- a/templates/nutrition/customer_confirm_delete.html
+++ b/templates/nutrition/customer_confirm_delete.html
@@ -1,10 +1,13 @@
-% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
-  <h1>Delete customer?</h1>
+  <h2>Are you sure you want to delete customer?</h2>
   <form action="" method="post">
     {% csrf_token %}
 
-    <input type="submit" value="Yes" class="btn btn-danger">
+    <input type="submit" value="Yes, delete" class="btn btn-danger">
+    <button type="button" class="btn btn-secondary" onclick="history.back()">
+      No, I changed my mind
+    </button>
   </form>
 {% endblock %}
