--- a/templates/nutrition/customer_form.html
+++ b/templates/nutrition/customer_form.html
@@ -2,11 +2,20 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>Create customer</h1>
+   <h1>
+    {% if object %}
+      Update customer
+    {% else %}
+      Create customer
+    {% endif %}
+  </h1>
+
   <form action="" method="post" novalidate>
     {% csrf_token %}
     {{ form|crispy }}
 
-    <input type="submit" value="Submit" class="btn btn-primary">
+    <button type="submit" class="btn btn-success">
+      {% if object %}Update{% else %}Create{% endif %}
+    </button>
   </form>
 {% endblock %}
