updated category_form and product form, added buttons Update/Create

--- a/templates/nutrition/product_detail.html
+++ b/templates/nutrition/product_detail.html
@@ -20,3 +20,5 @@
   <li><strong>Fat:</strong> {{ product.fat }} g</li>
   <li><strong>Carbohydrates:</strong> {{ product.carbohydrates }} g</li>
 </ul>
+
+{% endblock %}
