--- a/templates/nutrition/category_form.html
+++ b/templates/nutrition/category_form.html
@@ -14,6 +14,7 @@
     {% csrf_token %}
     {{ form|crispy }}
 
-    <input type="submit" value="Create" class="btn btn-primary">
-  </form>
+    <button type="submit" class="btn btn-success">
+      {% if object %}Update{% else %}Create{% endif %}
+    </button>
 {% endblock %}
