--- a/templates/nutrition/product_confirm_delete.html
+++ b/templates/nutrition/product_confirm_delete.html
@@ -5,6 +5,9 @@
   <form action="" method="post">
     {% csrf_token %}
 
-    <input type="submit" value="Yes" class="btn btn-danger">
+    <input type="submit" value="Yes, delete" class="btn btn-danger">
+    <button type="button" class="btn btn-secondary" onclick="history.back()">
+      Go back
+    </button>
   </form>
 {% endblock %}
