updated ProductDetailView added context_object_name and product_detail.html corrected

--- a/templates/nutrition/product_detail.html
+++ b/templates/nutrition/product_detail.html
@@ -16,9 +16,9 @@
 
 <ul>
   <li><strong>Calories:</strong> {{ product.calories }} kcal</li>
-  <li><strong>Protein:</strong> {{ product.protein }} g</li>
-  <li><strong>Fat:</strong> {{ product.fat }} g</li>
-  <li><strong>Carbohydrates:</strong> {{ product.carbohydrates }} g</li>
+  <li><strong>Protein:</strong> {{ product.proteins }} g</li>
+  <li><strong>Fat:</strong> {{ product.fats }} g</li>
+  <li><strong>Carbohydrates:</strong> {{ product.carbs }} g</li>
 </ul>
 
 {% endblock %}
