--- a/templates/nutrition/category_list.html
+++ b/templates/nutrition/category_list.html
@@ -26,7 +26,9 @@
               {{ category.id }}
           </td>
           <td>
+            <a href="{% url 'nutrition:category-detail' pk=category.id %}">
               {{ category.name }}
+            </a>
           </td>
           <td>
               <a href="{% url 'nutrition:category-update' pk=category.id %}">
