corrected templates meal_list, products_list, categories_list

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -12,5 +12,5 @@
   <li class="list-group-item"><a href="{% url 'nutrition:customer-list' %}">Customers</a></li>
   <li class="list-group-item"><a href="{% url 'nutrition:category-list' %}">Categories</a></li>
   <li class="list-group-item"><a href="{% url 'nutrition:product-list' %}">Products</a></li>
-  <li class="list-group-item"><a href="{% url 'nutrition:meal-list' %}">My meals</a></li>
+  <li class="list-group-item"><a href="{% url 'nutrition:meal-list' %}">Meals</a></li>
 </ul>
