--- a/templates/nutrition/category_list.html
+++ b/templates/nutrition/category_list.html
@@ -12,13 +12,15 @@
 
 
   {% if category_list %}
-    <table class="table">
-      <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Update</th>
-        <th>Delete</th>
-      </tr>
+    <table class="table table-striped table-bordered mt-3">
+      <thead class="thead-light">
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+
 
       {% for category in category_list %}
         <tr>
@@ -31,16 +33,13 @@
             </a>
           </td>
           <td>
-              <a href="{% url 'nutrition:category-update' pk=category.id %}">
-                Update
-              </a>
-            </td>
-            <td>
-              <a style="color: red"
-                href="{% url 'nutrition:category-delete' pk=category.id %}">
-                Delete
-              </a>
-            </td>
+            <a href="{% url 'nutrition:category-update' pk=category.id %}" class="btn btn-sm btn-warning">
+              Update
+            </a>
+            <a href="{% url 'nutrition:category-delete' pk=category.id %}" class="btn btn-sm btn-danger">
+              Delete
+            </a>
+          </td>
         </tr>
       {% endfor %}
     </table>
