--- a/templates/nutrition/meal_list.html
+++ b/templates/nutrition/meal_list.html
@@ -11,15 +11,17 @@
   {% include "includes/search_form.html" %}
 
 {% if meal_list %}
-    <table class="table">
-      <tr>
-        <th>ID</th>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Date</th>
-        <th>Update</th>
-        <th>Delete</th>
-      </tr>
+    <table class="table table-striped table-bordered mt-3">
+      <thead class="thead-light">
+        <tr>
+          <th>ID</th>
+          <th>Product</th>
+          <th>Quantity</th>
+          <th>Date</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+
     {% for meal in meal_list %}
       <tr>
         <td><a href="{% url 'nutrition:meal-detail' pk=meal.id %}">
@@ -32,9 +34,13 @@
         </td>
         <td>{{ meal.quantity }}</td>
         <td>{{ meal.date|date:"Y-m-d" }}</td>
-        <td><a href="{% url 'nutrition:meal-update' pk=meal.id %}">Update</a></td>
         <td>
-          <a href="{% url 'nutrition:meal-delete' pk=meal.id %}" style="color:red">Delete</a>
+          <a href="{% url 'nutrition:meal-update' pk=meal.id %}" class="btn btn-sm btn-warning">
+            Update
+          </a>
+          <a href="{% url 'nutrition:meal-delete' pk=meal.id %}" class="btn btn-sm btn-danger">
+            Delete
+          </a>
         </td>
       </tr>
     {% endfor %}
