--- a/templates/nutrition/product_list.html
+++ b/templates/nutrition/product_list.html
@@ -1,24 +1,55 @@
 {% extends "base.html" %}
 {% load crispy_forms_filters %}
 
+{% block title %}
+  <title>Products</title>
+{% endblock %}
+
 {% block content %}
   <h1>
-    Product list
-    <a href="{% url 'nutrition:product-create' %}" class="btn btn-primary link-to-page">
-      Create
-    </a>
+    Products
+    <a href="{% url 'nutrition:product-create' %}" class="btn btn-primary ml-3">Create</a>
   </h1>
-  {% include "includes/search_form.html" %}
+
   {% if product_list %}
-    <ul>
-      {% for product in product_list %}
-        <li>
-          <a href="{% url 'nutrition:product-detail' pk=product.id %}">{{ product.id }}</a>
-          {{ product.name }} ({{ product.category.name }})
-        </li>
-      {% endfor %}
-    </ul>
+    <table class="table table-striped table-bordered mt-3">
+      <thead class="thead-light">
+        <tr>
+          <th>Name</th>
+          <th>Category</th>
+          <th>Calories</th>
+          <th>Proteins</th>
+          <th>Fats</th>
+          <th>Carbs</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for product in product_list %}
+          <tr>
+            <td>
+              <a href="{% url 'nutrition:product-detail' pk=product.pk %}">
+                {{ product.name }}
+              </a>
+            </td>
+            <td>{{ product.category.name }}</td>
+            <td>{{ product.calories }}</td>
+            <td>{{ product.proteins }}</td>
+            <td>{{ product.fats }}</td>
+            <td>{{ product.carbs }}</td>
+            <td>
+              <a href="{% url 'nutrition:product-update' pk=product.pk %}" class="btn btn-sm btn-warning">
+                Update
+              </a>
+              <a href="{% url 'nutrition:product-delete' pk=product.pk %}" class="btn btn-sm btn-danger">
+                Delete
+              </a>
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   {% else %}
-    <p>There are no products yet</p>
+    <p>No products available.</p>
   {% endif %}
 {% endblock %}
