--- a/templates/nutrition/meal_list.html
+++ b/templates/nutrition/meal_list.html
@@ -35,12 +35,18 @@
         <td>{{ meal.quantity }}</td>
         <td>{{ meal.date|date:"Y-m-d" }}</td>
         <td>
-          <a href="{% url 'nutrition:meal-update' pk=meal.id %}" class="btn btn-sm btn-warning">
-            Update
-          </a>
-          <a href="{% url 'nutrition:meal-delete' pk=meal.id %}" class="btn btn-sm btn-danger">
-            Delete
-          </a>
+          {% if meal.customer == user %}
+            <a href="{% url 'nutrition:meal-update' pk=meal.id %}" class="btn btn-sm btn-warning">
+              Update
+            </a>
+            <a href="{% url 'nutrition:meal-delete' pk=meal.id %}" class="btn btn-sm btn-danger">
+              Delete
+            </a>
+          {% else %}
+            <a href="{% url 'nutrition:toggle-meal-assign' pk=meal.id %}" class="btn btn-sm btn-danger">
+              Remove from my meals
+            </a>
+          {% endif %}
         </td>
       </tr>
     {% endfor %}
