--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,16 +1,18 @@
-<ul class="sidebar-nav list-group">
-  {% if user.is_authenticated %}
-    <li class="list-group-item">Customer: <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>
-    <li class="list-group-item"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-  {% else %}
-    <li class="list-group-item"><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-  {% endif %}
+<div class="sidebar">
+  <ul class="sidebar-nav list-group">
+    {% if user.is_authenticated %}
+      <li class="list-group-item">Customer: <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>
+      <li class="list-group-item"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+    {% else %}
+      <li class="list-group-item"><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+    {% endif %}
 
-  <br>
+    <br>
 
-  <li class="list-group-item"><a href="{% url 'nutrition:index' %}">Home</a></li>
-  <li class="list-group-item"><a href="{% url 'nutrition:customer-list' %}">Customers</a></li>
-  <li class="list-group-item"><a href="{% url 'nutrition:category-list' %}">Categories</a></li>
-  <li class="list-group-item"><a href="{% url 'nutrition:product-list' %}">Products</a></li>
-  <li class="list-group-item"><a href="{% url 'nutrition:meal-list' %}">Meals</a></li>
-</ul>
+    <li class="list-group-item"><a href="{% url 'nutrition:index' %}">Home</a></li>
+    <li class="list-group-item"><a href="{% url 'nutrition:customer-list' %}">Customers</a></li>
+    <li class="list-group-item"><a href="{% url 'nutrition:category-list' %}">Categories</a></li>
+    <li class="list-group-item"><a href="{% url 'nutrition:product-list' %}">Products</a></li>
+    <li class="list-group-item"><a href="{% url 'nutrition:meal-list' %}">Meals</a></li>
+  </ul>
+</div>
