--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -70,3 +70,25 @@ body {
 h1, h2 {
   color: #212529;
 }
+
+.search-form {
+  max-width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.search-form button {
+  height: 45px;
+  width: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  /*margin-top: -15px; !* <-- move a little bit higher *!*/
+}
+
+.mb-3 {
+  margin-bottom: 0px !important;
+}
