--- a/templates/includes/search_form.html
+++ b/templates/includes/search_form.html
@@ -1,6 +1,10 @@
 {% load crispy_forms_filters %}
 
-<form method="get" action="" class="form-inline mb-3">
-  {{ search_form|crispy }}
+<form method="get" action="" class="search-form">
+  <div class="flex-grow-1 me-2">
+    {{ search_form|crispy }}
+  </div>
   <button class="btn btn-secondary" type="submit">🔎</button>
+
 </form>
+
