--- a/templates/nutrition/product_list.html
+++ b/templates/nutrition/product_list.html
@@ -11,6 +11,8 @@
     <a href="{% url 'nutrition:product-create' %}" class="btn btn-primary ml-3">Create</a>
   </h1>
 
+  {% include "includes/search_form.html" %}
+
   {% if product_list %}
     <table class="table table-striped table-bordered mt-3">
       <thead class="thead-light">
