--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,5 +1,5 @@
 {% if is_paginated %}
-  <ul class="pagination">
+  <ul class="pagination justify-content-center">
     {% if page_obj.has_previous %}
       <li class="page-item">
         <a href="?page= {{ page_obj.previous_page_number }}" class="page-link">prev</a>
