--- a/templates/nutrition/customer_list.html
+++ b/templates/nutrition/customer_list.html
@@ -2,46 +2,50 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-    <h1>
-      Customer List
-      <a href="{% url 'nutrition:customer-create' %}" class="btn btn-primary link-to-page">
-        Create
-      </a>
-    </h1>
+<div class="container mt-4">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1>Customer List</h1>
+        <a href="{% url 'nutrition:customer-create' %}" class="btn btn-primary">Create Customer</a>
+    </div>
+
     {% include "includes/search_form.html" %}
 
     {% if customer_list %}
-    <table class="table table-striped table-bordered mt-3">
-      <thead class="thead-light">
-        <tr>
-          <th>ID</th>
-          <th>Last name</th>
-          <th>Age</th>
-          <th>Height</th>
-          <th>Weight</th>
-          <th>Gender</th>
-          <th>Activity level</th>
-        </tr>
-      </thead>
-
-    {% for customer in customer_list %}
-      <tr>
-        <td>{{ customer.id }}</td>
-        <td>
-          <a href="{{ customer.get_absolute_url }}">
-            {{ customer.username }}
-            {% if customer == request.user %} (Me){% endif %}
-          </a>
-        </td>
-        <td>{{ customer.age }}</td>
-        <td>{{ customer.height }}</td>
-        <td>{{ customer.weight }}</td>
-        <td>{{ customer.gender }}</td>
-        <td>{{ customer.activity_level }}</td>
-      </tr>
-    {% endfor %}
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover table-bordered align-middle">
+            <thead class="table-light">
+                <tr>
+                    <th>ID</th>
+                    <th>Last name</th>
+                    <th>Age</th>
+                    <th>Height</th>
+                    <th>Weight</th>
+                    <th>Gender</th>
+                    <th>Activity level</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for customer in customer_list %}
+                <tr>
+                    <td>{{ customer.id }}</td>
+                    <td>
+                        <a href="{{ customer.get_absolute_url }}">
+                            {{ customer.username }}
+                            {% if customer == request.user %} (Me){% endif %}
+                        </a>
+                    </td>
+                    <td>{{ customer.age }}</td>
+                    <td>{{ customer.height }}</td>
+                    <td>{{ customer.weight }}</td>
+                    <td>{{ customer.gender }}</td>
+                    <td>{{ customer.activity_level }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     {% else %}
-      <p>There are no customers in the app database.</p>
+    <div class="alert alert-info">There are no customers in the app database.</div>
     {% endif %}
+</div>
 {% endblock %}
