--- a/templates/nutrition/category_list.html
+++ b/templates/nutrition/category_list.html
@@ -2,49 +2,45 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>
-    Category List
-    <a href="{% url 'nutrition:category-create' %}" class="btn btn-primary link-to-page">
-      Create
-    </a>
-  </h1>
-  {% include "includes/search_form.html" %}
+<div class="container mt-4">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1>Category List</h1>
+        <a href="{% url 'nutrition:category-create' %}" class="btn btn-primary">Create Category</a>
+    </div>
 
+    {% include "includes/search_form.html" %}
 
-  {% if category_list %}
-    <table class="table table-striped table-bordered mt-3">
-      <thead class="thead-light">
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-
-
-      {% for category in category_list %}
-        <tr>
-          <td>
-              {{ category.id }}
-          </td>
-          <td>
-            <a href="{% url 'nutrition:category-detail' pk=category.id %}">
-              {{ category.name }}
-            </a>
-          </td>
-          <td>
-            <a href="{% url 'nutrition:category-update' pk=category.id %}" class="btn btn-sm btn-warning">
-              Update
-            </a>
-            <a href="{% url 'nutrition:category-delete' pk=category.id %}" class="btn btn-sm btn-danger">
-              Delete
-            </a>
-          </td>
-        </tr>
-      {% endfor %}
-    </table>
-
-  {% else %}
-      <p>There are no categories in the service.</p>
-  {% endif %}
+    {% if category_list %}
+    <div class="table-responsive">
+        <table class="table table-striped table-hover table-bordered align-middle">
+            <thead class="table-light">
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for category in category_list %}
+                <tr>
+                    <td>{{ category.id }}</td>
+                    <td>
+                        <a href="{% url 'nutrition:category-detail' pk=category.id %}">
+                            {{ category.name }}
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{% url 'nutrition:category-update' pk=category.id %}" class="btn btn-sm btn-warning">Update</a>
+                        <a href="{% url 'nutrition:category-delete' pk=category.id %}" class="btn btn-sm btn-danger">Delete</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% else %}
+    <div class="alert alert-info">There are no categories in the service.</div>
+    {% endif %}
+</div>
 {% endblock %}
+
