--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -92,3 +92,26 @@ h1, h2 {
 .mb-3 {
   margin-bottom: 0px !important;
 }
+
+.sidebar {
+  width: 230px;
+}
+
+.sidebar-link {
+  color: #333;
+  padding: 8px 10px;
+  border-radius: 8px;
+  transition: 0.2s;
+  font-weight: 500;
+}
+
+.sidebar-link:hover {
+  background: #f0f0f5;
+  text-decoration: none;
+  transform: translateX(4px);
+}
+
+.sidebar-menu .nav-link.active {
+  background: #0d6efd;
+  color: #fff !important;
+}
