--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,23 +2,33 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
+<div class="container mt-4">
 
-{% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+  <div class="mb-3">
+    <h1 class="mb-0">Login</h1>
+  </div>
 
-<h1>Login</h1>
+  {% if form.errors %}
+    <div class="alert alert-danger">
+      Your username and password didn't match. Please try again.
+    </div>
+  {% endif %}
 
-{% if next %}
-  <p>Please login to see this page.</p>
-{% endif %}
+  {% if next %}
+    <div class="alert alert-info">
+      Please login to see this page.
+    </div>
+  {% endif %}
 
-<form method="post" action="{% url 'login' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
+  <form method="post" action="{% url 'login' %}">
+    {% csrf_token %}
+    {{ form|crispy }}
 
-  <input type="submit" value="Login" class="btn btn-primary" />
-  <input type="hidden" name="next" value="{{ next }}" />
-</form>
+    <div class="mt-3">
+      <input type="submit" value="Login" class="btn btn-primary">
+      <input type="hidden" name="next" value="{{ next }}">
+    </div>
+  </form>
 
+</div>
 {% endblock %}
