--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -12,7 +12,7 @@
         Logout
       </a>
     {% else %}
-      <a href="{% url 'login'%}?next={{request.path}}" class="btn btn-primary w-100 btn-sm">
+      <a href="{% url 'login'%}" class="btn btn-primary w-100 btn-sm">
         Login
       </a>
     {% endif %}
